tests/errors/semantic/E002_mod_not_found.zy
<# ./i_do_not_exist <= m

>> m::fn() ¶
